src/test/deca/context/valid/provided/hello-world.deca
// Description:
//    Programme minimaliste utilisant println.
//
// Resultats:
//    Hello
//
// Historique:
//    cree le 01/01/2024

{       
        int a=43;
        a=-a;
}
