src/test/deca/context/invalid/provided/variable-not-used.deca
// Description:
//    Affectation et typage
//
// Resultats:
//    Ligne 12: Variable non utilise.
// 

{
   int a;
   boolean b;
   int c;
   a=a+c;
}
